--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
 spring.application.name=bizplan-be-inclass
+
+# ============================================
+# MySQL Database Configuration (Rule 303)
+# ============================================
+spring.datasource.url=jdbc:mysql://localhost:3306/bizplan?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ============================================
+# JPA / Hibernate Configuration
+# ============================================
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.open-in-view=false
+
+# ============================================
+# Flyway Migration Configuration (Rule 303)
+# ============================================
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
+
+# ============================================
+# Server Configuration
+# ============================================
+server.port=8080
