test(project): add unit and integration tests for Project API
- Add TemplateServiceTest for template validation logic
- Add ProjectServiceTest with Mockito mocking
- Add ProjectControllerTest for REST endpoints with MockMvc
- Add test application.properties with H2 in-memory DB
- All tests passing with 80%+ coverage target

Closes #2

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	
 	// Test - H2 for integration tests
