chore(config): implement secure environment variable management
- Add .env.example templates for Spring Boot and AI Engine
- Update application.properties to use environment variables
- Configure .gitignore to exclude sensitive .env files
- Enable Spring profiles for local/dev/prod environments

Security improvements:
- DB credentials via environment variables
- Gemini API key externalized
- JWT/Encryption keys configurable per environment

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 HELP.md
 .gradle
 build/
+
+### Environment Variables (Security) ###
+.env
+.env.*
+!.env.example
+application-local.properties
+application-local.yml
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -35,3 +42,21 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Python ###
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+ENV/
+.venv
+*.egg-info/
+dist/
+build/
+*.egg
+.pytest_cache/
+.coverage
+htmlcov/
