--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.application.name=bizplan-be-inclass
 
 # ============================================
+# Active Profile Configuration
+# ============================================
+# Set via environment variable: SPRING_PROFILES_ACTIVE=local|dev|prod
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
+
+# ============================================
 # MySQL Database Configuration (Rule 303)
 # ============================================
-spring.datasource.url=jdbc:mysql://localhost:3306/bizplan?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:bizplan}?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
 spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -12,7 +18,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA / Hibernate Configuration
 # ============================================
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
+spring.jpa.show-sql=${JPA_SHOW_SQL:false}
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.open-in-view=false
@@ -27,4 +33,15 @@ spring.flyway.locations=classpath:db/migration
 # ============================================
 # Server Configuration
 # ============================================
-server.port=8080
+server.port=${SERVER_PORT:8080}
+
+# ============================================
+# AI Engine Integration
+# ============================================
+ai.engine.url=${AI_ENGINE_URL:http://localhost:8001}
+
+# ============================================
+# Security Configuration
+# ============================================
+app.security.jwt-secret=${JWT_SECRET:}
+app.security.encryption-key=${ENCRYPTION_KEY:}
