--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	// JPA & Database
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	runtimeOnly 'com.h2database:h2'  // H2 for local development
 	
 	// Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -39,6 +40,12 @@ dependencies {
 	
 	// Core
 	implementation 'org.springframework.boot:spring-boot-starter'
+	
+	// DevTools (for H2 console in local development)
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	
+	// OpenAPI / Swagger UI (SpringDoc)
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
 	
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
