feat(gemini): add Spring AI dependencies and configuration
- Add Spring AI BOM and Google Gemini starter dependencies
- Configure Gemini API settings in application.properties
- Add GEMINI_API_KEY environment variable support
- Configure test environment with Spring AI settings

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ repositories {
 }
 
 dependencies {
+	// Spring AI (Google Gemini)
+	implementation platform('org.springframework.ai:spring-ai-bom:2.0.0-M1')
+	implementation 'org.springframework.ai:spring-ai-starter-model-google-genai'
+
 	// Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	
