--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,6 +41,15 @@ server.port=${SERVER_PORT:8080}
 ai.engine.url=${AI_ENGINE_URL:http://localhost:8001}
 
 # ============================================
+# Spring AI - Google Gemini Configuration
+# ============================================
+# GEMINI_API_KEY는 .env 등 환경변수에서 주입하는 것을 권장
+spring.ai.google.genai.api-key=${GEMINI_API_KEY:}
+spring.ai.google.genai.chat.options.model=gemini-2.5-flash-lite
+spring.ai.google.genai.chat.options.temperature=0.8
+spring.ai.google.genai.chat.options.top-p=0.9
+
+# ============================================
 # Security Configuration
 # ============================================
 app.security.jwt-secret=${JWT_SECRET:}
