--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -15,3 +15,10 @@ spring.jpa.properties.hibernate.format_sql=true
 # Disable Flyway for Tests (use JPA auto-create)
 spring.flyway.enabled=false
 
+# Spring AI - Google Gemini Configuration (for integration tests)
+# GEMINI_API_KEY 환경변수가 설정되어 있어야 통합 테스트가 실행됩니다.
+spring.ai.google.genai.api-key=${GEMINI_API_KEY:}
+spring.ai.google.genai.chat.options.model=gemini-2.5-flash-lite
+spring.ai.google.genai.chat.options.temperature=0.8
+spring.ai.google.genai.chat.options.top-p=0.9
+
