--- a/build.gradle
+++ b/build.gradle
@@ -62,4 +62,11 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	
+	// 통합 테스트 실행 시 로깅 테스트 활성화
+	// IntegrationTest로 끝나는 테스트 클래스를 실행할 때 자동으로 활성화
+	if (project.hasProperty('integration') || 
+		project.gradle.startParameter.taskNames.any { it.contains('IntegrationTest') }) {
+		systemProperty 'runIntegrationTests', 'true'
+	}
 }
