feat(pre-registration): 사전 등록 프로모션 백엔드 기능 구현
## 주요 변경 사항

### Entity & Repository
- PreRegistration: 사전 등록 엔티티 (이름, 이메일, 요금제, 할인코드 등)
- Promotion: 프로모션 엔티티 (Phase A/B 할인율, 기간 관리)
- PreRegistrationRepository: 이메일, 할인코드, 상태별 조회 메서드
- PromotionRepository: 활성 프로모션 조회

### DTO
- PreRegistrationRequest: 유효성 검사 포함 (이름, 이메일, 전화번호 패턴)
- PreRegistrationResponse: 할인 코드, 가격 정보 포함
- PromotionInfoResponse: 현재 Phase, 요금제별 가격 정보
- EmailCheckResponse: 이메일 중복 확인

### Service
- PreRegistrationService: 등록, 조회, 할인 계산, 코드 생성 로직

### Controller
- POST /api/v1/pre-registrations: 사전 등록 신청
- GET /api/v1/pre-registrations/check-email: 이메일 중복 체크
- GET /api/v1/pre-registrations/{id}: 등록 정보 조회
- GET /api/v1/promotions/current: 현재 프로모션 정보

### 예외 처리
- DuplicateEmailException (409)
- PromotionEndedException (410)
- ResourceNotFoundException (404)

### 테스트
- Controller: 10개 테스트 (100% 통과)
- Service: 10개 테스트 (100% 통과)
- Repository: 8개 테스트 (100% 통과)

### 기타
- SQLite 마이그레이션 파일 추가 (V1-V4)
- 초기 프로모션 데이터 (data.sql)
- 테스트 수행 보고서 추가

--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 	// JPA & Database
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'com.mysql:mysql-connector-j'
-	runtimeOnly 'com.h2database:h2'  // H2 for local development
+	runtimeOnly 'com.h2database:h2'  // H2 for local development & testing
 	
 	// Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -53,7 +53,6 @@ dependencies {
 	
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	
 	// Test - H2 for integration tests
