--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -15,6 +15,9 @@ spring.jpa.properties.hibernate.format_sql=true
 # Disable Flyway for Tests (use JPA auto-create)
 spring.flyway.enabled=false
 
+# Disable data.sql loading for tests
+spring.sql.init.mode=never
+
 # Spring AI - Google Gemini Configuration (for integration tests)
 # GEMINI_API_KEY 환경변수가 설정되어 있어야 통합 테스트가 실행됩니다.
 spring.ai.google.genai.api-key=${GEMINI_API_KEY:}
