refactor(database): migrate from MySQL to SQLite
- Replace MySQL configuration with SQLite in application.properties
- Remove MySQL dependencies (mysql-connector-j, flyway-mysql) from build.gradle
- Delete MySQL migration files (V1, V2)
- Configure SQLite as default database for all environments
- Add connection pool settings optimized for SQLite
- Add error resolution report documenting the migration

--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,7 @@ dependencies {
 	
 	// JPA & Database
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	runtimeOnly 'org.xerial:sqlite-jdbc'  // SQLite for local development
+	runtimeOnly 'org.xerial:sqlite-jdbc'  // SQLite database
 	implementation 'org.hibernate.orm:hibernate-community-dialects'  // SQLite Dialect support
 	
 	// Validation
@@ -49,10 +48,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	
-	// Flyway for DB Migration (Rule 303)
+	// Flyway for DB Migration
 	implementation 'org.flywaydb:flyway-core'
-	implementation 'org.flywaydb:flyway-mysql'
-	// SQLite support (Flyway Community Edition supports SQLite)
 	// SQLite support is built into flyway-core, no additional dependency needed
 	
 	// Core
