--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,28 +7,38 @@ spring.application.name=bizplan-be-inclass
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
 
 # ============================================
-# MySQL Database Configuration (Rule 303)
+# SQLite Database Configuration
 # ============================================
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:bizplan}?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:sqlite:./data/bizplan.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.username=
+spring.datasource.password=
 
 # ============================================
-# JPA / Hibernate Configuration
+# JPA / Hibernate Configuration (SQLite)
 # ============================================
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDialect
+# Flyway가 스키마를 관리하므로 Hibernate는 스키마 생성을 하지 않음
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=${JPA_SHOW_SQL:false}
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.open-in-view=false
 
 # ============================================
-# Flyway Migration Configuration (Rule 303)
+# Flyway Migration Configuration (SQLite)
 # ============================================
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
-spring.flyway.locations=classpath:db/migration
+spring.flyway.locations=classpath:db/migration/sqlite
+spring.flyway.baseline-version=0
+
+# ============================================
+# Connection Pool Configuration (SQLite)
+# ============================================
+# SQLite는 단일 쓰기 락을 사용하므로 connection pool size를 1로 설정
+spring.datasource.hikari.maximum-pool-size=1
+spring.datasource.hikari.minimum-idle=1
 
 # ============================================
 # Server Configuration
