feat(auth): 이메일 인증 및 비밀번호 재설정 기능 구현
- 이메일 인증 토큰 및 비밀번호 재설정 토큰 엔티티 추가
- 이메일 인증 및 비밀번호 재설정 API 엔드포인트 구현
- EmailService를 통한 이메일 발송 기능 추가
- 관련 DTO 및 예외 처리 추가
- 데이터베이스 마이그레이션 스크립트 추가
- 이백 번 규칙에 PR 메시지 한글 작성 규칙 추가

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 	// Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	
+	// Mail
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	
 	// JPA & Database
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'org.xerial:sqlite-jdbc'  // SQLite database
