--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,7 +54,7 @@ ai.engine.url=${AI_ENGINE_URL:http://localhost:8001}
 # Spring AI - Google Gemini Configuration
 # ============================================
 # GEMINI_API_KEY는 .env 등 환경변수에서 주입하는 것을 권장
-spring.ai.google.genai.api-key=${GEMINI_API_KEY:}
+spring.ai.google.genai.api-key=${GEMINI_API_KEY:WARN_GEMINI_API_KEY_MISSING_IN_PRODUCTION}
 spring.ai.google.genai.chat.options.model=gemini-2.5-flash-lite
 spring.ai.google.genai.chat.options.temperature=0.8
 spring.ai.google.genai.chat.options.top-p=0.9
@@ -62,5 +62,26 @@ spring.ai.google.genai.chat.options.top-p=0.9
 # ============================================
 # Security Configuration
 # ============================================
-app.security.jwt-secret=${JWT_SECRET:}
-app.security.encryption-key=${ENCRYPTION_KEY:}
+app.security.jwt-secret=${JWT_SECRET:WARN_JWT_SECRET_MISSING_IN_PRODUCTION}
+app.security.encryption-key=${ENCRYPTION_KEY:WARN_ENCRYPTION_KEY_MISSING_IN_PRODUCTION}
+
+# ============================================
+# Mail Configuration (Resend SMTP)
+# ============================================
+spring.mail.host=${MAIL_HOST:smtp.resend.com}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USERNAME:resend}
+spring.mail.password=${MAIL_PASSWORD:WARN_RESEND_API_KEY_MISSING_IN_PRODUCTION}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# ============================================
+# Application Configuration
+# ============================================
+mail.from-address=noreply@send.makersround.world
+app.mail.from=${MAIL_FROM:noreply@send.makersround.world}
+app.frontend.url=${FRONTEND_URL:http://localhost:5173}
