feat(cors): 실서비스 오리진 makersround.world 추가
- CORS 허용 오리진에 https://makersround.world, http://makersround.world 추가
- 개발 환경 localhost 오리진 유지
- 환경 변수 CORS_ALLOWED_ORIGINS로 오버라이드 가능

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -85,3 +85,11 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 mail.from-address=noreply@send.makersround.world
 app.mail.from=${MAIL_FROM:noreply@send.makersround.world}
 app.frontend.url=${FRONTEND_URL:http://localhost:5173}
+
+# ============================================
+# CORS Configuration
+# ============================================
+# 허용할 Origin 목록 (쉼표로 구분)
+# 개발 환경: localhost
+# 실서비스: makersround.world
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173,https://makersround.world,http://makersround.world}
