--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -91,5 +91,5 @@ app.frontend.url=${FRONTEND_URL:http://localhost:5173}
 # ============================================
 # 허용할 Origin 목록 (쉼표로 구분)
 # 개발 환경: localhost
-# 실서비스: makersround.world
-app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173,https://makersround.world,http://makersround.world}
+# 실서비스: makersround.world, www.makersround.world
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173,https://makersround.world,http://makersround.world,https://www.makersround.world,http://www.makersround.world}
